common-applications/freesky-icsl-hk-cluster/opengauss-usercenter/website-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-rpm: "200"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Content-Type-Options "nosniff";
      add_header X-Frame-Options "DENY";
      add_header Cache-Control "no-cache";
      add_header Pragma "no-cache";
  name: website-ingress
  namespace: opengauss-usercenter
spec:
  rules:
  - host: id.opengauss.myopeninfra.com
    http:
      paths:
      - backend:
          serviceName: website-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - id.opengauss.myopeninfra.com
    secretName: website-tls
